test/src/e2e_vm_tests/test_programs/should_fail/recursive_const_associated_over_module_function/src/main.sw
library;

struct S {}

fn mod_fn() -> u8 {
    S::S_ASSOC
}

impl S {
    const S_ASSOC: u8 = mod_fn();
}